Fix overflowing stage titles in neighbor list

--- a/src/styles/h5peditor-game-map-dynamic-checkboxes.scss
+++ b/src/styles/h5peditor-game-map-dynamic-checkboxes.scss
@@ -5,6 +5,7 @@
     .h5p-label-text {
       vertical-align: middle;
       display: inline-block;
+      overflow-wrap: anywhere;
       padding-left: 0.2rem;
     }
 
